--- a/week5/paris site/index.html
+++ b/week5/paris site/index.html
@@ -9,8 +9,8 @@
     <link rel="shortcut icon"
         href="https://cdn-icons.flaticon.com/png/512/1206/premium/1206747.png?token=exp=1653416853~hmac=6091c52913bb4e4797fb6e4418384ab3"
         type="image/svg">
-    <link rel="stylesheet" href="normalize.css">
-    <link rel="stylesheet" href="style_flex.css">
+    <link rel="stylesheet" href="./styles/normalize.css">
+    <link rel="stylesheet" href="./styles/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Jost:ital@1&display=swap" rel="stylesheet">
