--- a/week6/site example/index.html
+++ b/week6/site example/index.html
@@ -14,67 +14,67 @@
 
     <div class="container">
 
-        <div class="main">
+        <article class="main">
 
-            <div class="cell cell-1">
+            <section class="cell cell-1">
                 1
-            </div>
+            </section>
 
-            <div class="cell cell-2">
+            <section class="cell cell-2">
                 2
-            </div>
+            </section>
 
-            <div class="cell cell-3">
+            <section class="cell cell-3">
                 3
-            </div>
+            </section>
 
-            <div class="cell cell-4">
+            <section class="cell cell-4">
                 4
-            </div>
+            </section>
 
-            <div class="cell cell-5">
+            <section class="cell cell-5">
                 5
-            </div>
+            </section>
 
-            <div class="cell cell-6">
+            <section class="cell cell-6">
                 6
-            </div>
+            </section>
 
-            <div class="cell cell-7">
+            <section class="cell cell-7">
                 7
-            </div>
+            </section>
 
-            <div class="cell cell-8">
+            <section class="cell cell-8">
                 8
-            </div>
+            </section>
 
-        </div>
+        </article>
 
-        <div class="menu">
+        <nav class="menu">
 
             <h3>Finapp</h3>
 
-            <div class="button button-1">
+            <a class="button button-1">
                 1
-            </div>
+            </a>
 
-            <div class="button button-2">
+            <a class="button button-2">
                 2
-            </div>
+            </a>
 
-            <div class="button button-3">
+            <a class="button button-3">
                 3
-            </div>
+            </a>
 
-            <div class="button button-4">
+            <a class="button button-4">
                 4
-            </div>
+            </a>
 
-            <div class="button button-5">
+            <a class="button button-5">
                 5
-            </div>
+            </a>
 
-        </div>
+        </nav>
 
 
 </body>
