--- a/week7/2/index.html
+++ b/week7/2/index.html
@@ -14,43 +14,43 @@
 
     <div class="container">
 
-        <div class="main">
+        <article class="main">
 
-            <div class="cell cell-1"></div>
+            <section class="cell cell-1"></section>
 
-            <div class="cell cell-2"></div>
+            <section class="cell cell-2"></section>
 
-            <div class="cell cell-3"></div>
+            <section class="cell cell-3"></section>
 
-            <div class="cell cell-4"></div>
+            <section class="cell cell-4"></section>
 
-            <div class="cell cell-5"></div>
+            <section class="cell cell-5"></section>
 
-            <div class="cell cell-6"></div>
+            <section class="cell cell-6"></section>
 
-            <div class="cell cell-7"></div>
+            <section class="cell cell-7"></section>
 
-            <div class="cell cell-8"></div>
+            <section class="cell cell-8"></section>
 
-        </div>
+        </article>
 
-        <div class="menu">
+        <nav class="menu">
 
             <h3>Finapp</h3>
 
-            <div class="button button-1"></div>
+            <button class="button button-1"></button>
 
-            <div class="button button-2"></div>
+            <button class="button button-2"></button>
 
-            <div class="button button-3"></div>
+            <button class="button button-3"></button>
 
-            <div class="button button-4"></div>
+            <button class="button button-4"></button>
 
-            <div class="button button-5"></div>
+            <button class="button button-5"></button>
 
             </menu>
 
-        </div>
+        </nav>
     </div>
 
 </body>
