--- a/week7/1/responsive/index.html
+++ b/week7/1/responsive/index.html
@@ -16,15 +16,15 @@
     </header>
 
     <main class="main">
-        <div class="section1">
+        <section class="section1">
             section
-        </div>
-        <div class="section2">
+        </section>
+        <section class="section2">
             section
-        </div>
-        <div class="section3">
+        </section>
+        <section class="section3">
             section
-        </div>
+        </section>
     </main>
 
     <aside class="aside">
