--- a/week8/3/index.html
+++ b/week8/3/index.html
@@ -66,7 +66,7 @@
 
     <main class="main">
         <div class="main__content">
-            <h1 class="main__content__headline">Виртуальная реальность без проводов</h1>
+            <p class="main__content__headline">Виртуальная реальность без проводов</p>
             <p class="main__content__paragraph">Лучшее, что случалось с виртуальным миром в реальности. Новый компактный
                 шлем без проводов и дорогих
                 компьютеров.</p>
