--- a/week8/3/index_2.html
+++ b/week8/3/index_2.html
@@ -17,9 +17,9 @@
 <body>
     <header class="header">
         <div class="header__content">
-            <div class="header__content__browser">VR</div>
-            <div class="header__content__brand">
-                <svg class="header__content__brand__svg" width="201" height="40" viewBox="0 0 201 40" fill="none"
+            <div class="header__browser">VR</div>
+            <div class="header__brand">
+                <svg class="header__svg" width="201" height="40" viewBox="0 0 201 40" fill="none"
                     xmlns="http://www.w3.org/2000/svg">
                     <circle cx="26" cy="26" r="14" fill="#EC615B" />
                     <g style="mix-blend-mode:multiply">
@@ -52,10 +52,10 @@
                 </svg>
 
 
-                <button class="header__content__brand__button">
+                <button class="header__button">
                     корзина
-                    <svg class="header__content__brand__button_image" width="14" height="14" viewBox="0 0 14 14"
-                        fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <svg class="header__image" width="14" height="14" viewBox="0 0 14 14" fill="none"
+                        xmlns="http://www.w3.org/2000/svg">
                         <circle cx="7" cy="5" r="4" stroke="white" stroke-width="2" />
                         <path d="M2.60163 13.25L0.934962 5.75H13.065L11.3984 13.25H2.60163Z" fill="white" stroke="white"
                             stroke-width="1.5">
@@ -66,55 +66,55 @@
     </header>
 
     <main class="main">
-        <p class="main_headline">
+        <p class="main__headline">
             Возможности
         </p>
 
         <div class="main__content">
 
-            <div class="main__content__section_1">
+            <div class="main__section main__section_margin">
 
                 <img src="./img/scientist.svg" alt="scientist">
 
-                <p class="main__content__section_1__p1a">Без проводов</p>
-                <p class="main__content__section_1__p1b">Шлем работает без проводов. Не нужен ни компьютер, ни внешнее
+                <p class="section__headline">Без проводов</p>
+                <p class="section__paragraph">Шлем работает без проводов. Не нужен ни компьютер, ни внешнее
                     питание, ни большое помещение, чтобы расставить трекеры.</p>
             </div>
 
-            <div class="main__content__section_2">
+            <div class="main__section">
 
                 <img src="./img/robot.svg" alt="robot">
 
-                <p class="main__content__section_2__p2a">Без компьютера</p>
-                <p class="main__content__section_2__p2b">Современным VR-шлемам нужен мощный компьютер, чтобы запускать
+                <p class="section__headline">Без компьютера</p>
+                <p class="section__paragraph">Современным VR-шлемам нужен мощный компьютер, чтобы запускать
                     игры. Наш шлем запускает игры из облака, поэтому просто наслаждайтесь.</p>
             </div>
 
-            <div class="main__content__section_3">
+            <div class="main__section">
 
                 <img src="./img/gamer.svg" alt="gamer">
 
-                <p class="main__content__section_3__p3a">До 10 часов работы</p>
-                <p class="main__content__section_3__p3b">Несмотря на компактность и производительность, шлем может
+                <p class="section__headline">До 10 часов работы</p>
+                <p class="section__paragraph">Несмотря на компактность и производительность, шлем может
                     работать до 10 часов — даже, если вы играете в самые ресурсоемкие игры.</p>
             </div>
 
-            <div class="main__content__section_4">
-                <p class="main__content__section_4__p4a">Сотни игр</p>
-                <p class="main__content__section_4__p4b">Уже сейчас вам доступно более сотни игр: от высокобюджетных
+            <div class="main__section main__section_margin">
+                <p class="section__headline">Сотни игр</p>
+                <p class="section__paragraph">Уже сейчас вам доступно более сотни игр: от высокобюджетных
                     ААА-тайтлов до маленьких независимых проектов. Скоро их станет еще больше.</p>
             </div>
 
-            <div class="main__content__section_5">
-                <p class="main__content__section_5__p5a">Почти даром</p>
-                <p class="main__content__section_5__p5b">По сравнению с другими VR-шлемами наш стоит гораздо меньше. И
+            <div class="main__section main__section_size">
+                <p class="section__headline">Почти даром</p>
+                <p class="section__paragraph">По сравнению с другими VR-шлемами наш стоит гораздо меньше. И
                     вы существенно экономите на мощном компьютере.</p>
             </div>
 
-            <div class="main__content__section_6">
-                <p class="main__content__section_6__p6">Новости</p>
-                <input class="main__content__section_6__email" type="email" name="subscription" placeholder="Эл. адрес">
-                <button class="main__content__section_6__followbtn">Подписаться</button>
+            <div class="main__section main__section_pink">
+                <p class="section__headline section__headline_white">Новости</p>
+                <input class="section__email" type="email" name="subscription" placeholder="Эл. адрес">
+                <button class="section__btn">Подписаться</button>
             </div>
 
         </div>
@@ -123,12 +123,12 @@
 
     <nav class="nav">
         <ul class="nav__content">
-            <li class="nav__content__element">Возможности</a>
+            <li class="nav__element">Возможности</a>
             </li>
-            <li class="nav__content__element">Где купить</a>
+            <li class="nav__element">Где купить</a>
             </li>
-            <li class="nav__content__element">Доставка</a></li>
-            <li class="nav__content__element">Помощь</a></li>
+            <li class="nav__element">Доставка</a></li>
+            <li class="nav__element">Помощь</a></li>
         </ul>
     </nav>
 
