fixed img and BEM

--- a/week8/3/index.html
+++ b/week8/3/index.html
@@ -17,9 +17,9 @@
 <body>
     <header class="header">
         <div class="header__content">
-            <div class="header__content__browser">VR</div>
-            <div class="header__content__brand">
-                <svg class="header__content__brand_svg" width="201" height="40" viewBox="0 0 201 40" fill="none"
+            <div class="header__browser">VR</div>
+            <div class="header__brand">
+                <svg class="header__svg" width="201" height="40" viewBox="0 0 201 40" fill="none"
                     xmlns="http://www.w3.org/2000/svg">
                     <circle cx="26" cy="26" r="14" fill="#EC615B" />
                     <g style="mix-blend-mode:multiply">
@@ -52,10 +52,10 @@
                 </svg>
 
 
-                <button class="header__content__brand__button">
+                <button class="header__btn">
                     корзина
-                    <svg class="header__content__brand__button_image" width="14" height="14" viewBox="0 0 14 14"
-                        fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <svg class="header__btn-image" width="14" height="14" viewBox="0 0 14 14" fill="none"
+                        xmlns="http://www.w3.org/2000/svg">
                         <circle cx="7" cy="5" r="4" stroke="white" stroke-width="2" />
                         <path d="M2.60163 13.25L0.934962 5.75H13.065L11.3984 13.25H2.60163Z" fill="white" stroke="white"
                             stroke-width="1.5">
@@ -66,12 +66,12 @@
 
     <main class="main">
         <div class="main__content">
-            <p class="main__content__headline">Виртуальная реальность без проводов</p>
-            <p class="main__content__paragraph">Лучшее, что случалось с виртуальным миром в реальности. Новый компактный
+            <p class="main__headline">Виртуальная реальность без проводов</p>
+            <p class="main__paragraph">Лучшее, что случалось с виртуальным миром в реальности. Новый компактный
                 шлем без проводов и дорогих
                 компьютеров.</p>
-            <button class="main__content__btn">купить
-                <svg class="main__content__btn_image" width="43" height="30" viewBox="0 0 43 30" fill="none"
+            <button class="main__btn">купить
+                <svg class="main__btn-image" width="43" height="30" viewBox="0 0 43 30" fill="none"
                     xmlns="http://www.w3.org/2000/svg">
                     <path fill-rule="evenodd" clip-rule="evenodd"
                         d="M2.4375 0.5625C1.33293 0.5625 0.4375 1.45793 0.4375 2.5625V27.306C0.4375 28.4105 1.33293 29.306 2.4375 29.306H40.1619C41.2664 29.306 42.1619 28.4105 42.1619 27.306V12.6162H0.437541V7.05295H42.1619V2.5625C42.1619 1.45793 41.2664 0.5625 40.1619 0.5625H2.4375Z"
@@ -79,16 +79,17 @@
                 </svg>
             </button>
         </div>
+        <div class="main__background"><img src="./img/pic.svg" alt="boy"></div>
     </main>
 
     <nav class="nav">
         <ul class="nav__content">
-            <li class="nav__content__element"><a class="nav__content__element__link" href="#">Возможности</a>
+            <li class="nav__element"><a class="nav__link" href="#">Возможности</a>
             </li>
-            <li class="nav__content__element"><a class="nav__content__element__link" href="#">Где купить</a>
+            <li class="nav__element"><a class="nav__link" href="#">Где купить</a>
             </li>
-            <li class="nav__content__element"><a class="nav__content__element__link" href="#">Доставка</a></li>
-            <li class="nav__content__element"><a class="nav__content__element__link" href="#">Помощь</a></li>
+            <li class="nav__element"><a class="nav__link" href="#">Доставка</a></li>
+            <li class="nav__element"><a class="nav__link" href="#">Помощь</a></li>
         </ul>
     </nav>
 
