--- a/week13/practical hw/1/index.html
+++ b/week13/practical hw/1/index.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>What is your age?</title>
 </head>
 <body>
-    <button onclick="greetings()">Кликни меня</button>
+    <input type="text" class="age"/> 
+    <button onclick="showAge()">Ok</button>
+    <div class="result"></div>
     <script src="js\script.js"></script>
 </body>
 </html>
