--- a/week17/3/index.html
+++ b/week17/3/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="random">
-    <button class="sendMessage" onclick="generate()">рандом</button>
+    <button class="sendMessage" onclick="generate()">сгенерировать числа</button>
     <div class="generator"></div>
 </div>
 <script src="js\index.js"></script>
