--- a/week17/1/index.html
+++ b/week17/1/index.html
@@ -11,8 +11,11 @@
         <label for="fio">Введите Ваше ФИО:</label>
         <input type="text" id="fio" />
         <div class="data">
+            <label for="surname"><b>Фамилия:</b></label>
             <div class="surname"></div>
+            <label for="name"><b>Имя:</b></label>
             <div class="name"></div>
+            <label for="famname"><b>Отчество:</b></label>
             <div class="famname"></div>
         </div>
     </div>
